# insights

./: .env  .env.example  .gitignore  AGENTIC_PATTERNS_INTEGRATION.md  DEBUGGING_SETUP.md  field_documentation.json  implement_patterns.md  jiras.md  logs_system_prompt.md  pyproject.toml  readme.md  run_with_uv.py  temp_explore_logs_deeply.py  test.md  test_azure_openai_manual.py  test_nlp_parser_manual.py  test_opensearch_manual.py  test_query_builder_manual.py  test_query_builder_validation.py  test_schema_discovery_manual.py
logs_analysis/: broad_exploration_results.json  event_field_relationships.json  event_field_relationships.md  logs_analysis.md  logs_broad_exploration.md  non_event_documents_analysis.json  non_event_documents_analysis.md  temp_broad_exploration.py  temp_explore_event_fields.py  temp_explore_non_events.py
prompts/: nlp_parser_system.txt  schema_id_fields.txt  schema_query_generation.txt
src/nlap/: __init__.py  main.py
src/nlap/api/: dependencies.py
src/nlap/api/routes/: health.py  query.py
src/nlap/azureopenai/: __init__.py  client.py  models.py
src/nlap/config/: __init__.py  settings.py
src/nlap/models/: __init__.py  base.py
src/nlap/nlp/: __init__.py  date_parser.py  entity_extractor.py  intent_classifier.py  models.py  parser.py
src/nlap/opensearch/: __init__.py  client.py  field_extractor.py  models.py  query_builder.py  schema_cache.py  schema_discovery.py  schema_models.py  type_identifier.py
src/nlap/utils/: __init__.py  logger.py  prompt_loader.py
tests/: conftest.py
tests/integration/: __init__.py  test_end_to_end_query_flow.py  test_nlp_parser_manual.py  test_opensearch_manual.py  test_query_builder_complex.py  test_query_builder_execution.py  test_query_builder_manual.py  test_query_builder_validation.py  test_schema_discovery_manual.py  test_streaming_api_e2e.py  test_with_actual_date_range.py
tests/unit/: test_azure_openai_client.py  test_query_builder.py  test_schema_discovery.py
troubleshoot/: check_data_availability.py  diagnose_opensearch_async.py  explore_fields.py  test_async_behavior.py  test_check_data_range.py  test_data_availability.py
